# scoring-api

./: .gitignore  Dockerfile  README.md  ci.yml  docker-compose.yml  pyproject.toml
src/: __main__.py  api_requests.py  handlers.py  model.py  scoring_service.py  store.py
tests/: test_api.py
tests/integration/: test_integration.py
