[tool.poetry]
name = "scoring-api"
version = "0.1.0"
description = "Тестовый проект скоринг-апи"
authors = ["Черчеcова Надежда Закаровна <NArushanova@inno.tech>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]
[tool.poetry.dependencies]
python = "^3.12"
python-dateutil = "^2.8.2"
scoring = "^0.0.9"
api = "^0.0.7"
redis = "^6.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"


[tool.poetry.scripts]
scoring-api = "src.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
